WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272601
Crash under ~WebAlternativeTextClient() when closing Safari window while paused in debugger
https://bugs.webkit.org/show_bug.cgi?id=272601
Summary
Crash under ~WebAlternativeTextClient() when closing Safari window while paus...
Chris Dumez
Reported
2024-04-12 13:29:37 PDT
Crash under ~WebAlternativeTextClient() when closing Safari window while paused in debugger.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-04-12 13:29:45 PDT
<
rdar://125689132
>
Chris Dumez
Comment 2
2024-04-12 13:31:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27203
EWS
Comment 3
2024-04-12 15:06:33 PDT
Committed
277440@main
(224cac4b7170): <
https://commits.webkit.org/277440@main
> Reviewed commits have been landed. Closing PR #27203 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug