Cherry-pick 277440@main (224cac4b7170). https://bugs.webkit.org/show_bug.cgi?id=272601

Crash under ~WebAlternativeTextClient() when closing Safari window while paused in debugger
    https://bugs.webkit.org/show_bug.cgi?id=272601
    rdar://125689132

    Reviewed by Ryosuke Niwa.

    Null check `m_page` since it is a WeakPtr.

    * Source/WebKit/WebProcess/WebCoreSupport/mac/WebAlternativeTextClient.cpp:
    (WebKit::WebAlternativeTextClient::WebAlternativeTextClient):
    (WebKit::WebAlternativeTextClient::~WebAlternativeTextClient):

    Canonical link: https://commits.webkit.org/277440@main

Canonical link: https://commits.webkit.org/274313.207@webkitglib/2.44